fix oui-select spacing issue

--- a/ui/src/components/select/select.scss
+++ b/ui/src/components/select/select.scss
@@ -117,7 +117,7 @@ $gray-color: #eee;
   border: 1px solid #c8c8c8;
   background-color: #ffffff;
   max-height: 272px;
-  margin: 9px 0 0 -10px;
+  margin: 6px 0 0 -10px;
   box-sizing: border-box;
   min-width: 100px;
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
